fix(index): adjust autor meta tag in minusc

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>WDD 131 – Dynamic Web Fundamentals - Jose D. Leonett</title>
-        <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - Jose D. Leonett">
-        <meta name="Author" content="Jose D. Leonett">
+        <title>WDD 131 – Dynamic Web Fundamentals – Jose D. Leonett</title>
+        <meta name="description" content="WDD 131 – Dynamic Web Fundamentals – Jose D. Leonett">
+        <meta name="author" content="Jose D. Leonett">
         <link rel="stylesheet" href="styles/base.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
