style(temples): update header structure and improve semantic HTML in temples.html
WDD131 - W02 Assignment: Picture Album

--- a/temples.html
+++ b/temples.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Temples Photo Gallery</title>
     <meta
@@ -22,7 +22,7 @@
   <body>
     <header>
       <div class="header-top">
-          <p id="headerTitle">Temple Album</p>
+          <h2 id="headerTitle">Temple Album</h2>
           <a id="menuButton">☰</a>
       </div>
       <nav id="menuNavigation" class="hidden">
@@ -36,7 +36,7 @@
       </nav>
     </header>
     <main>
-      <h1 id="pageTitle">Home</h1>
+      <h1 id="pageTitle">Temple</h1>
       <div class="templeGallery">
         <figure class="templeGalleryCard">
           <img
@@ -104,7 +104,6 @@
       </div>
     </main>
     <footer>
-      <footer>
         <p>
           &copy;<span id="currentyear"></span> Jose Daniel Leonett |
           Venezuela-Argentina
@@ -112,7 +111,6 @@
         <p class="accentText">
           Last Modification: <span id="lastModified"></span>
         </p>
-      </footer>
     </footer>
   </body>
 </html>
