style(temples): improve semantic HTML and update header structure in temples.html
WDD131 - W02 Assignment: Picture Album

--- a/temples.html
+++ b/temples.html
@@ -2,27 +2,25 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temples Photo Gallery</title>
     <meta
       name="description"
-      content="This page contains a photo gallery of temples of Church of Jesus Christ of Later-Days Saints."
-    />
-    <meta name="author" content="Jose D. Leonett" />
-    <link rel="stylesheet" href="styles/temples.css" />
-    <link rel="stylesheet" href="styles/temples-large.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      content="This page contains a photo gallery of temples of Church of Jesus Christ of Later-Days Saints.">
+    <meta name="author" content="Jose D. Leonett">
+    <link rel="stylesheet" href="styles/temples.css" >
+    <link rel="stylesheet" href="styles/temples-large.css" >
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Outfit:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
     <script src="scripts/temples.js" defer></script>
   </head>
   <body>
     <header>
       <div class="header-top">
-          <h2 id="headerTitle">Temple Album</h2>
+          <h1 id="headerTitle">Temple Album</h1>
           <a id="menuButton">☰</a>
       </div>
       <nav id="menuNavigation" class="hidden">
@@ -36,69 +34,60 @@
       </nav>
     </header>
     <main>
-      <h1 id="pageTitle">Temple</h1>
+      <h2 id="pageTitle">Home</h2>
       <div class="templeGallery">
         <figure class="templeGalleryCard">
           <img
             src="images/temples/buenos-aires-argentina-temple.jpg"
-            alt="Buenos Aires Argentina Temple Exterior"
-          />
+            alt="Buenos Aires Argentina Temple Exterior">
           <figcaption>Buenos Aires Argentina Temple</figcaption>
         </figure>
         <figure class="templeGalleryCard">
           <img
             src="images/temples/caracas_venezuela_temple.jpg"
-            alt="Caracas Venezuela Temple Exterior"
-          />
+            alt="Caracas Venezuela Temple Exterior">
           <figcaption>Caracas Venezuela Temple</figcaption>
         </figure>
         <figure class="templeGalleryCard">
           <img
             src="images/temples/bountiful-utah-temple.jpg"
-            alt="Bontiful Utah Temple Exterior"
-          />
+            alt="Bontiful Utah Temple Exterior">
           <figcaption>Bountiful Utah Temple</figcaption>
         </figure>
         <figure class="templeGalleryCard">
           <img
             src="images/temples/adelaide-australia-temple.jpg"
-            alt="Adelaide Australia Temple Exterior"
-          />
+            alt="Adelaide Australia Temple Exterior">
           <figcaption>Adelaide Australia Temple</figcaption>
         </figure>
         <figure class="templeGalleryCard">
           <img
             src="images/temples/albuquerque-new-mexico-temple.jpg"
-            alt="Albuquerque New Mexico Temple Exterior"
-          />
+            alt="Albuquerque New Mexico Temple Exterior">
           <figcaption>Albuquerque New Mexico Temple</figcaption>
         </figure>
         <figure class="templeGalleryCard">
           <img
             src="images/temples/arequipa-peru-temple.jpeg"
-            alt="Arequipa Peru Temple Exterior"
-          />
+            alt="Arequipa Peru Temple Exterior">
           <figcaption>Arequipa Peru Temple</figcaption>
         </figure>
         <figure class="templeGalleryCard">
           <img
             src="images/temples/billings-montana-temple.jpg"
-            alt="Billings Montana Temple Exterior"
-          />
+            alt="Billings Montana Temple Exterior">
           <figcaption>Billings Montana Temple</figcaption>
         </figure>
         <figure class="templeGalleryCard">
           <img
             src="images/temples/boston-massachusetts-temple.jpg"
-            alt="Boston Massachusetts Temple Exterior"
-          />
+            alt="Boston Massachusetts Temple Exterior">
           <figcaption>Boston Massachusetts Temple</figcaption>
         </figure>
         <figure class="templeGalleryCard">
           <img
             src="images/temples/brigham-city-temple.jpg"
-            alt="Brigham City Temple Exterior"
-          />
+            alt="Brigham City Temple Exterior">
           <figcaption>Brigham City Temple</figcaption>
         </figure>
       </div>
