fix(place): correct image paths for proper loading in place.html

--- a/place.html
+++ b/place.html
@@ -22,13 +22,13 @@
       <picture class="hero-image">
         <source
           media="(max-width: 480px)"
-          srcset="/images/place/banner-portrail.webp"
+          srcset="./images/place/banner-portrail.webp"
         />
         <source
           media="(min-width: 481px)"
-          srcset="/images/place/banner-landscape.webp"
+          srcset="./images/place/banner-landscape.webp"
         />
-        <img src="/images/place/banner-portrail.jpg" alt="Roraima Tepui" />
+        <img src="./images/place/banner-portrail.jpg" alt="Roraima Tepui" />
       </picture>
       <div class="card">
         <h2>Data</h2>
@@ -53,7 +53,7 @@
       </div>
       <div class="card">
         <h2>Weather</h2>
-        <img src="/images/place/weather-icon-cloudy.svg" alt="Partly Cloudy" />
+        <img src="./images/place/weather-icon-cloudy.svg" alt="Partly Cloudy" />
         <dl>
           <dt>Temperature:</dt>
           <dd id="temperature"></dd>
