feat(place): enhance place page with improved metadata and styling adjustments

--- a/place.html
+++ b/place.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles/place.css" />
-    <link rel="stylesheet" href="./styles/place-large.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Venezuela: Facts and Real-Time Weather</title>
+    <meta name="description" content="Discover key facts about Venezuela and get real-time weather updates.">
+    <meta name="author" content="Jose D. Leonett">
+    <link rel="stylesheet" href="./styles/place.css">
+    <link rel="stylesheet" href="./styles/place-large.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Outfit:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet">
     <script src="./scripts/place.js" defer></script>
   </head>
   <body>
@@ -26,9 +27,8 @@
         />
         <source
           media="(min-width: 481px)"
-          srcset="./images/place/banner-landscape.webp"
-        />
-        <img src="./images/place/banner-portrail.jpg" alt="Roraima Tepui" />
+          srcset="./images/place/banner-landscape.webp">
+        <img src="./images/place/banner-portrail.jpg" alt="Roraima Tepui">
       </picture>
       <div class="card">
         <h2>Data</h2>
@@ -53,7 +53,7 @@
       </div>
       <div class="card">
         <h2>Weather</h2>
-        <img src="./images/place/weather-icon-cloudy.svg" alt="Partly Cloudy" />
+        <img src="./images/place/weather-icon-cloudy.svg" alt="Partly Cloudy">
         <dl>
           <dt>Temperature:</dt>
           <dd id="temperature"></dd>
