--- a/place.html
+++ b/place.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Venezuela: Facts and Real-Time Weather</title>
+    <title>WDD 131 – Place – Jose D. Leonett</title>
     <meta name="description" content="Discover key facts about Venezuela and get real-time weather updates.">
     <meta name="author" content="Jose D. Leonett">
-    <link rel="stylesheet" href="./styles/place.css">
-    <link rel="stylesheet" href="./styles/place-large.css">
+    <link rel="stylesheet" href="styles/place.css">
+    <link rel="stylesheet" href="styles/place-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Outfit:wght@100..900&display=swap"
       rel="stylesheet">
-    <script src="./scripts/place.js" defer></script>
+    <script src="scripts/place.js" defer></script>
   </head>
   <body>
     <header>
@@ -23,12 +23,12 @@
       <picture class="hero-image">
         <source
           media="(max-width: 480px)"
-          srcset="./images/place/banner-portrail.webp"
+          srcset="images/place/banner-portrail.webp"
         />
         <source
           media="(min-width: 481px)"
-          srcset="./images/place/banner-landscape.webp">
-        <img src="./images/place/banner-portrail.jpg" alt="Roraima Tepui">
+          srcset="images/place/banner-landscape.webp">
+        <img src="images/place/banner-portrail.jpg" alt="Roraima Tepui">
       </picture>
       <div class="card">
         <h2>Data</h2>
@@ -53,7 +53,7 @@
       </div>
       <div class="card">
         <h2>Weather</h2>
-        <img src="./images/place/weather-icon-cloudy.svg" alt="Partly Cloudy">
+        <img src="images/place/weather-icon-cloudy.svg" alt="Partly Cloudy">
         <dl>
           <dt>Temperature:</dt>
           <dd id="temperature"></dd>
