fix(place): update banner image source in place.html for improved loading

--- a/place.html
+++ b/place.html
@@ -23,8 +23,7 @@
       <picture class="hero-image">
         <source
           media="(max-width: 480px)"
-          srcset="images/place/banner-portrail.webp"
-        />
+          srcset="images/place/banner-portrail.webp">
         <source
           media="(min-width: 481px)"
           srcset="images/place/banner-landscape.webp">
