fix(place): update image format for banner in place.html to improve loading

--- a/place.html
+++ b/place.html
@@ -27,7 +27,7 @@
         <source
           media="(min-width: 481px)"
           srcset="images/place/banner-landscape.webp">
-        <img src="images/place/banner-portrail.jpg" alt="Roraima Tepui">
+        <img src="images/place/banner-portrail.webp" alt="Roraima Tepui">
       </picture>
       <div class="card">
         <h2>Data</h2>
