fix(form): add missing label for product name select field

--- a/form.html
+++ b/form.html
@@ -28,6 +28,7 @@
             <form action="review.html" method="get" class="card">
                 <fieldset>
                     <legend title="Product Name">Product Name</legend>
+                    <label for="productName"></label>
                     <select name="productName" id="productName" aria-label="Product Name" required>
                         <option value="" disabled selected>Choose a Product...</option>
                     </select>
