--- a/form.html
+++ b/form.html
@@ -1,93 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>WDD131 | Jose D. Leonett | Product Review</title>
-        <meta name="description"
-            content="This page contains a form to submit a product review. The form includes fields for product name, overall rating, date of installation, useful features, written review, and your name.">
-        <meta name="author" content="Jose D. Leonett">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WDD131 | Jose D. Leonett | Product Review</title>
+  <meta name="description"
+    content="This page contains a form to submit a product review. The form includes fields for product name, overall rating, date of installation, useful features, written review, and your name.">
+  <meta name="author" content="Jose D. Leonett">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Outfit:wght@100..900&display=swap"
-            rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Outfit:wght@100..900&display=swap"
+    rel="stylesheet">
 
-        <link rel="stylesheet" href="styles/form.css">
-        <link rel="stylesheet" href="styles/form-large.css">
-        <script src="scripts/form.js" defer></script>
-    </head>
+  <link rel="stylesheet" href="styles/form.css">
+  <link rel="stylesheet" href="styles/form-large.css">
+  <script src="scripts/form.js" defer></script>
+</head>
 
-    <body>
-        <header>
-            <h1>Product Review</h1>
-        </header>
-        <main>
-            <form action="review.html" method="get" class="card">
-                <fieldset>
-                    <legend title="Product Name">Product Name</legend>
-                    <label for="productName"></label>
-                    <select name="productName" id="productName" aria-label="Product Name" required>
-                        <option value="" disabled selected>Choose a Product...</option>
-                    </select>
-                </fieldset>
-                <fieldset>
-                    <legend title="Overall Rating">Overall Rating</legend>
-                    <div class="star-rating">
-                        <input type="radio" name="stars" id="star-a" value="5" aria-label="5 stars" required />
-                        <label for="star-a"></label>
+<body>
+  <header>
+    <h1>Product Review</h1>
+  </header>
+  <main>
+    <form action="review.html" method="get" class="card">
 
-                        <input type="radio" name="stars" id="star-b" value="4" aria-label="4 stars" required />
-                        <label for="star-b"></label>
+      <fieldset>
+        <legend>Product Name</legend>
+        <label for="productName">Product Name</label>
+        <select name="productName" id="productName" required>
+          <option value="" disabled selected>Choose a Product...</option>
+        </select>
+      </fieldset>
 
-                        <input type="radio" name="stars" id="star-c" value="3" aria-label="3 stars" required />
-                        <label for="star-c"></label>
+      <fieldset>
+        <legend>Overall Rating</legend>
+        <div class="star-rating">
+          <input type="radio" name="stars" id="star-5" value="5" required>
+          <label for="star-5" aria-label="5 estrellas">★</label>
 
-                        <input type="radio" name="stars" id="star-d" value="2" aria-label="2 stars" required />
-                        <label for="star-d"></label>
+          <input type="radio" name="stars" id="star-4" value="4" required>
+          <label for="star-4" aria-label="4 estrellas">★</label>
 
-                        <input type="radio" name="stars" id="star-e" value="1" aria-label="1 star" required />
-                        <label for="star-e"></label>
-                    </div>
-                </fieldset>
-                <fieldset>
-                    <legend title="Date of Installation">Date of Installation</legend>
-                    <input type="date" name="date" id="date" aria-label="Date of Installation" required>
-                </fieldset>
-                <fieldset class="checkbox-group">
-                    <legend title="Useful Features">Which features did you find in the product?<i>(Check all that
-                            apply)</i></legend>
-                    <label for="durability"><input type="checkbox" name="durability" id="durability"
-                            value="durability">Durability</label>
-                    <label for="ease-of-use"><input type="checkbox" name="ease-of-use" id="ease-of-use"
-                            value="ease-of-use">Ease Of Use</label>
-                    <label for="perfomance"><input type="checkbox" name="perfomance" id="perfomance"
-                            value="perfomance">Perfomance</label>
-                    <label for="design"><input type="checkbox" name="design" id="design" value="design">Design</label>
-                </fieldset>
-                <fieldset>
-                    <legend title="Written Review">Written Review <i>(Optional)</i></legend>
-                    <textarea name="review" id="review" rows="5" cols="30"
-                        aria-label="Written Review (Optional)"></textarea>
-                </fieldset>
-                <fieldset>
-                    <legend title="Your Name">Your Name <i>(Optional)</i></legend>
-                    <input type="text" name="name" id="name" aria-label="Your Name (Optional)">
-                </fieldset>
-                <button type="submit">Post Review</button>
-            </form>
-        </main>
-        <footer>
-            <p>
-                &copy;<span id="currentyear"></span> Jose Daniel Leonett |
-                Venezuela-Argentina
-            </p>
-            <p class="accentText">
-                Last Modification: <span id="lastModified"></span>
-            </p>
-        </footer>
-    </body>
+          <input type="radio" name="stars" id="star-3" value="3" required>
+          <label for="star-3" aria-label="3 estrellas">★</label>
+
+          <input type="radio" name="stars" id="star-2" value="2" required>
+          <label for="star-2" aria-label="2 estrellas">★</label>
+
+          <input type="radio" name="stars" id="star-1" value="1" required>
+          <label for="star-1" aria-label="1 estrella">★</label>
+        </div>
+      </fieldset>
+
+      <fieldset>
+        <legend>Date of Installation</legend>
+        <label for="date">Date of Installation</label>
+        <input type="date" name="date" id="date" required>
+      </fieldset>
+
+      <fieldset class="checkbox-group">
+        <legend>Which features did you find useful? <i>(Check all that apply)</i></legend>
+
+        <label for="durability">
+          <input type="checkbox" name="features" id="durability" value="durability">
+          Durability
+        </label>
+
+        <label for="ease-of-use">
+          <input type="checkbox" name="features" id="ease-of-use" value="ease-of-use">
+          Ease of Use
+        </label>
+
+        <label for="performance">
+          <input type="checkbox" name="features" id="performance" value="performance">
+          Performance
+        </label>
+
+        <label for="design">
+          <input type="checkbox" name="features" id="design" value="design">
+          Design
+        </label>
+      </fieldset>
+
+      <fieldset>
+        <legend>Written Review <i>(Optional)</i></legend>
+        <label for="review">Written Review</label>
+        <textarea name="review" id="review" rows="5" cols="30"></textarea>
+      </fieldset>
+
+      <fieldset>
+        <legend>Your Name <i>(Optional)</i></legend>
+        <label for="name">Your Name</label>
+        <input type="text" name="name" id="name">
+      </fieldset>
+
+      <button type="submit">Post Review</button>
+    </form>
+  </main>
+  <footer>
+    <p>
+      &copy;<span id="currentyear"></span> Jose Daniel Leonett | Venezuela‑Argentina
+    </p>
+    <p class="accentText">
+      Last Modification: <span id="lastModified"></span>
+    </p>
+  </footer>
+</body>
 
 </html>
