--- a/review.html
+++ b/review.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="styles/review_large.css">
 
         <meta name="author" content="Jose D. Leonett">
+        <meta name="description"
+            content="This page displays the product review submitted by the user. It includes details such as product name, overall rating, date of installation, useful features, written review, and user's name.">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
