fix(navigation): Update links to include section anchors for better navigation

--- a/project/favorites.html
+++ b/project/favorites.html
@@ -59,7 +59,7 @@
                     <p class="section-description">You haven't added any favorites yet. Explore our games, characters, and consoles and click the star icon to add them to your favorites.</p>
                     <div class="no-favorites-actions">
                         <a href="games-gallery.html" class="cta-button">Explore Games</a>
-                        <a href="index.html" class="cta-button">View Characters</a>
+                        <a href="index.html#section-characters" class="cta-button">View Characters</a>
                     </div>
                 </div>
             </div>
