--- a/project/games-gallery.html
+++ b/project/games-gallery.html
@@ -17,6 +17,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Alata&family=Jersey+15&display=swap" rel="stylesheet">
         <link rel="icon" href="images/assets/favicon.ico" type="image/x-icon">
         
+        <link rel="preload" href="https://fonts.googleapis.com/css2?family=Alata&family=Jersey+15&display=swap" as="style">
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" as="style">
+        <link rel="preload" href="https://fonts.gstatic.com/s/alata/v11/PbytFmztEwbI.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+        <link rel="preload" href="https://fonts.gstatic.com/s/jersey15/v3/_6_9EDzuR.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+        
         <script type="module" src="scripts/components.js" defer></script>
         <script type="module" src="scripts/games-gallery.js" defer></script>
     </head>
