--- a/project/games-gallery.html
+++ b/project/games-gallery.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="styles/base.css">
         <link rel="stylesheet" href="styles/games-gallery.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Alata&family=Jersey+15&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Alata&family=Jersey+15&display=swap" rel="stylesheet" as="style" onload="this.onload=null;this.rel='stylesheet'">
         <link rel="icon" href="images/assets/favicon.ico" type="image/x-icon">
         
         <link rel="preload" href="https://fonts.googleapis.com/css2?family=Alata&family=Jersey+15&display=swap" as="style">
